--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
+• Vi har rettet en fejl, der gjorde det umuligt at afvise menuen for at række hånden op eller reagere på et gruppeopkald, hvis du trykkede på disse ikoner, mens du ventede på, at andre mennesker skulle deltage i opkaldet, eller hvis du var den sidste person, der lagde på. Næste gang du er alene i et gruppeopkald, kan du gøre Madonna stolt og "express yourself". 
