--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
+• Wir haben einen Fehler behoben, der es verhinderte, das Menü zum Heben der Hand zu verlassen oder auf einen Gruppenanruf zu reagieren, wenn du auf die Symbole getippt hast, während du darauf gewartet hast, dass andere Leute dem Anruf beitreten, oder wenn du die letzte Person warst, die aufgelegt hat. Wenn du das nächste Mal alleine in einem Gruppenanruf bist, kannst du die Bühne für dich beanspruchen. 
