--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
+• Nouvelle mise à jour, nouvelle correction de bug ! Ne pas réussir à fermer le menu vous permettant de lever la main ou de réagir à un appel de groupe, c’était un tantinet agaçant, et on vous comprend… Pas pratique quand on attend que d’autres utilisateurs rejoignent l’appel ou qu’on est le dernier à raccrocher. La prochaine fois que vous vous retrouvez seul dans un appel de groupe, vous pourrez chanter « Libérééée, délivrééée » ! 
