--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
+• Abbiamo risolto un bug che rendeva impossibile far scomparire il menu per alzare la mano o reagire in una chiamata di gruppo. Questo poteva accadere se toccavi una di queste icone mentre attendevi altri utenti o se eri l'ultima persona ad attaccare. La prossima volta che ci sei solo tu in chiamata… concerto time 🎤 
