--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
+• Naprawiliśmy błąd, który uniemożliwiał zamknięcie menu podnoszenia ręki lub dodawania reakcji w rozmowie grupowej, gdy te ikony zostały naciśnięte w trakcie oczekiwania na dołączenie do rozmowy przez pozostałych uczestników lub jeśli byłeś(-aś) ostatnią osobą, która się rozłączyła. Następnym razem, gdy będziesz sama(-a) w połączeniu grupowym, bądź jak Madonna i wyraź siebie. 
