--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
+• Am remediat o eroare care făcea imposibilă eliminarea meniului pentru a ridica mâna sau a reacționa la un apel de grup, dacă atingeai aceste pictograme în timp ce așteptai ca alte persoane să se alăture apelului sau dacă erai ultima persoană care închidea. Data viitoare când ești singur/ă într-un apel de grup, fii ca Madonna și exprimă-te liber. 
