--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
+• Исправлена ошибка, из-за которой меню не закрывалось, когда вы нажимали на значки, чтобы поднять руку или отреагировать на групповой звонок, ожидая, пока другие люди присоединятся к звонку, или если вы были последним, кто повесил трубку. В следующий раз, когда вы останетесь одни на групповом звонке, с гордостью выразите себя с помощью хита Мадонны "Hung Up". 
