--- a/Signal/translations/ug.lproj/Localizable.strings
+++ b/Signal/translations/ug.lproj/Localizable.strings
@@ -3668,7 +3668,7 @@
 "INFO_MESSAGE_REPORTED_SPAM_LEARN_MORE_TITLE" = "مەلۇم قىلىنغان ئالدامچىلىق";
 
 /* Shown in inbox and conversation after syncing as a placeholder indicating why your message history is missing. */
-"INFO_MESSAGE_SYNCED_THREAD" = "You can send or receive synchronized messages from your phone or iPad. For your security, chat history isn't transferred to new linked devices.";
+"INFO_MESSAGE_SYNCED_THREAD" = "يانفون ياكى iPad تىن قەدەمداش ھالدا ئۇچۇر يوللاپ ياكى تاپشۇرۇۋالالايسىز. شەخسىيەت سەۋەبىدىن، سۆھبەت خاتىرىسى يېڭىدىن باغلانغان ئۈسكۈنىگە قەدەمداشلانمايدۇ.";
 
 /* Indicates that another user has changed their phone number. Embeds: {{ the user's name}} */
 "INFO_MESSAGE_USER_CHANGED_PHONE_NUMBER_FORMAT" = "%1$@ تېلېفون نومۇرىنى ئۆزگەرتتى.";
@@ -5621,13 +5621,13 @@
 "RAISED_HANDS_LOWER_HAND_BUTTON" = "چۈشۈرۈش";
 
 /* A message appearing on the call view's raised hands toast indicating that multiple members have raised their hands. Embeds {{name}}, {{number of other users}} */
-"RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE" = "%1$@ +%2$d raised a hand";
+"RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE" = "%1$@+%2$d قول كۆتۈردى";
 
 /* A message appearing on the call view's raised hands toast indicating that another named member has raised their hand. */
-"RAISED_HANDS_TOAST_SINGLE_HAND_MESSAGE" = "%1$@ raised a hand";
+"RAISED_HANDS_TOAST_SINGLE_HAND_MESSAGE" = "%1$@ قول كۆتۈردى";
 
 /* A message appearing on the call view's raised hands toast indicating that you raised your own hand. */
-"RAISED_HANDS_TOAST_YOUR_HAND_MESSAGE" = "You raised a hand";
+"RAISED_HANDS_TOAST_YOUR_HAND_MESSAGE" = "قول كۆتۈردىڭىز";
 
 /* The header used to indicate All reactions to a given message. Embeds {{number of reactions}} */
 "REACTION_DETAIL_ALL_FORMAT" = "بارلىق · %1$@";
