--- a/Signal/translations/uk.lproj/InfoPlist.strings
+++ b/Signal/translations/uk.lproj/InfoPlist.strings
@@ -2,7 +2,7 @@ NSAppleMusicUsageDescription = "Signal використовує Apple Music дл
 NSCameraUsageDescription = "Signal використовує камеру для знімків та відеовикликів.";
 NSContactsUsageDescription = "Signal використовує ваші контакти, щоб знаходити знайомих вам користувачів. Ми не зберігаємо контакти на сервері.";
 NSFaceIDUsageDescription = "Блокувальник екрану Signal використовує Face ID.";
-NSLocationWhenInUseUsageDescription = "Signal потребує доступу до розташування, щоб ним поділитися.";
+NSLocationWhenInUseUsageDescription = "Signal потребує доступу до геопозиції, щоб поділитися місцеположенням.";
 NSMicrophoneUsageDescription = "Signal потребує доступу до мікрофона, щоб здійснювати й приймати виклики та записувати голосові повідомлення.";
 NSPhotoLibraryAddUsageDescription = "Signal зберігатиме фото до бібліотеки фотографій.";
 NSPhotoLibraryUsageDescription = "Signal дасть вам змогу вибрати фото з бібліотеки, які ви хочете надіслати.";
