--- a/fastlane/metadata/es-MX/release_notes.txt
+++ b/fastlane/metadata/es-MX/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
+• Hemos corregido un error que impedía cerrar el menú para levantar la mano o reaccionar a una llamada de grupo si tocabas esos iconos mientras esperabas que otras personas se unieran a la llamada o si eras la última persona en cortar. Así que la próxima vez que te encuentres a solas en una llamada grupal, ¡no te cortes y exprésate! 
